--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -218,6 +218,23 @@ body{
     font-size: 25px;
 }
 
+.title, #footer {
+    display: block;
+}
+
+#instructions {
+    display: none;
+    padding: 2%;
+    background-color: #50BCC6;
+}
+
+#instruction-close-button {
+    float: right;
+}
+
+#instruction-close-button:hover {
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 600px) {
     body{
